# hrdr

./: AUDIT.md  CHANGELOG.md  Cargo.toml  DRY.md  ESSAY.md  README.md  TEMP.md  deny.toml
.github/workflows/: ci.yml
apps/hrdr/: Cargo.toml
apps/hrdr-gui/: Cargo.toml
apps/hrdr-gui/src/: main.rs  md.rs
apps/hrdr/src/: backend.rs  main.rs
apps/hrdr/tests/: headless.rs  smoke.rs  tui_pty.rs
apps/hrdr/tests/common/: mod.rs
crates/hrdr-agent/: Cargo.toml
crates/hrdr-agent/src/: agents_dir.rs  auth.rs  auth_store.rs  budget.rs  chatgpt_models.rs  compaction.rs  config.rs  delegation.rs  hooks.rs  lib.rs  model_ref.rs  models.rs  oauth.rs  pane.rs  paths.rs  prompt.rs  resolve.rs  session.rs  store_lock.rs  subagent_live.rs  subagent_transcript.rs  test_support.rs  transcript.rs  turn.rs  turn_loop.rs  turn_state.rs  usage.rs  validate.rs
crates/hrdr-agent/src/templates/: system.j2
crates/hrdr-app/: Cargo.toml
crates/hrdr-app/src/: commands.rs  completion.rs  config.rs  effort.rs  format.rs  history.rs  lib.rs  login.rs  palette.rs  pane.rs  session.rs  sessions.rs  skills.rs  status.rs  subagents.rs  themes.rs  transcript.rs  util.rs
crates/hrdr-app/src/commands/: compaction.rs  dispatch.rs  helpers.rs  host.rs  model.rs  types.rs
crates/hrdr-app/src/templates/skills/: audit.md  commit.md  fix.md  perf.md  plan.md  release.md  review.md  simplify.md  test.md  tidy.md  todo.md
crates/hrdr-app/tests/: watch_debounce.rs
crates/hrdr-app/themes/: catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  nord.toml  tokyonight.toml
crates/hrdr-editor/: Cargo.toml
crates/hrdr-editor/src/: lib.rs  plain.rs
crates/hrdr-llm/: Cargo.toml
crates/hrdr-llm/src/: anthropic.rs  capped_read.rs  catalog.rs  client.rs  codex.rs  fs.rs  lib.rs  sse.rs  types.rs
crates/hrdr-llm/tests/: catalog_pinned.rs
crates/hrdr-test-support/: Cargo.toml
crates/hrdr-test-support/src/: lib.rs
crates/hrdr-test-support/tests/: every_test_binary_is_sandboxed.rs  leak_guard.rs
crates/hrdr-tools/: Cargo.toml
crates/hrdr-tools/src/: checkpoint.rs  guardrails.rs  hooks.rs  lib.rs  lsp.rs  mcp.rs  memory.rs  patch.rs  proc.rs  tools.rs  web.rs
crates/hrdr-tools/src/mcp/: client.rs  mod.rs  tool.rs  transport.rs  types.rs  util.rs
crates/hrdr-tools/src/tools/: edit.rs  fileops.rs  find.rs  git.rs  grep.rs  ls.rs  lsp_nav.rs  mod.rs  mutation.rs  read.rs  replace.rs  shell.rs  todo.rs  tree.rs  watch.rs  write.rs
crates/hrdr-tui/: Cargo.toml
crates/hrdr-tui/src/: app.rs  lib.rs  theme.rs  theme.toml  tui.rs  ui.rs
crates/hrdr-tui/src/app/: commands.rs  completion.rs  e2e.rs  effort_selector.rs  model_selector.rs  selector.rs  session.rs  session_selector.rs  theme_selector.rs  util.rs
docs/: agent-logic-migration.md  agent-model-introspection-implementation-plan.md  agent-model-introspection-spec.md  deferred-improvements.md  dry-audit.md  memory-tool-analysis.md  sandbox-design.md  security-audit.md  session-retention.md  task-revive.md  tool-tok-stats.md  transcript-unification.md  web-ui-plan.md
docs/superpowers/: 2026-07-12-cross-provider-delegation-handoff.md
docs/superpowers/plans/: 2026-07-12-cross-provider-delegation.md  2026-07-12-subagent-transcript-persistence.md
docs/superpowers/specs/: 2026-07-12-cross-provider-delegation-design.md  2026-07-12-subagent-transcript-persistence-design.md
pkg/alpine/: APKBUILD.in
pkg/aur/: PKGBUILD-bin.in
pkg/homebrew/: hrdr.rb.in
pkg/scoop/: hrdr.json.in
