[workspace]
resolver = "3"
members = [
    "crates/hrdr-llm",
    "crates/hrdr-tools",
    "crates/hrdr-agent",
    "crates/hrdr-editor",
    "crates/hrdr-tui",
    "apps/hrdr",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hrdr"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
# internal
hrdr-llm = { path = "crates/hrdr-llm", version = "0.0.1" }
hrdr-tools = { path = "crates/hrdr-tools", version = "0.0.1" }
hrdr-agent = { path = "crates/hrdr-agent", version = "0.0.1" }
hrdr-editor = { path = "crates/hrdr-editor", version = "0.0.1" }
hrdr-tui = { path = "crates/hrdr-tui", version = "0.0.1" }

# hjkl — path deps to the sibling repo during pre-release iteration.
# Switch to crates.io pins once hjkl publishes a matching release.
hjkl-engine = { path = "../hjkl/crates/hjkl-engine" }
hjkl-vim = { path = "../hjkl/crates/hjkl-vim" }
hjkl-buffer = { path = "../hjkl/crates/hjkl-buffer" }
hjkl-buffer-tui = { path = "../hjkl/crates/hjkl-buffer-tui" }
hjkl-engine-tui = { path = "../hjkl/crates/hjkl-engine-tui" }
hjkl-clipboard = { path = "../hjkl/crates/hjkl-clipboard" }
hjkl-theme = { path = "../hjkl/crates/hjkl-theme" }
hjkl-theme-tui = { path = "../hjkl/crates/hjkl-theme-tui" }
hjkl-markdown = { path = "../hjkl/crates/hjkl-markdown" }
hjkl-markdown-tui = { path = "../hjkl/crates/hjkl-markdown-tui" }
hjkl-xdg = { path = "../hjkl/crates/hjkl-xdg" }
hjkl-icons = { path = "../hjkl/crates/hjkl-icons" }

# third-party
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
async-stream = "0.3"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
glob = "0.3"
ignore = "0.4"
notify = "8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2"
toml = { version = "0.8", features = ["parse"] }
toml_edit = "0.22"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
