[workspace]
resolver = "3"
members = [
    "crates/hrdr-llm",
    "crates/hrdr-tools",
    "crates/hrdr-agent",
    "crates/hrdr-editor",
    "crates/hrdr-app",
    "crates/hrdr-tui",
    "crates/hrdr-test-support",
    "apps/hrdr",
]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hrdr"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
# internal
hrdr-llm = { path = "crates/hrdr-llm", version = "0.5.1" }
hrdr-tools = { path = "crates/hrdr-tools", version = "0.5.1" }
hrdr-agent = { path = "crates/hrdr-agent", version = "0.5.1" }
hrdr-editor = { path = "crates/hrdr-editor", version = "0.5.1" }
hrdr-app = { path = "crates/hrdr-app", version = "0.5.1" }
hrdr-tui = { path = "crates/hrdr-tui", version = "0.5.1" }
# Dev-only, never published: the ctor that sandboxes $HOME/XDG before any test runs.
# Path-only on purpose — cargo strips a versionless path dev-dependency on publish.
hrdr-test-support = { path = "crates/hrdr-test-support" }

# hjkl — crates.io pins (caret-minor; lockfile holds the exact patch).
hjkl-engine = "0.33"
hjkl-vim = "0.33"
hjkl-buffer = "0.33"
hjkl-buffer-tui = "0.33"
hjkl-engine-tui = "0.33"
hjkl-clipboard = "0.33"
hjkl-theme = "0.33"
hjkl-theme-tui = "0.33"
hjkl-markdown = "0.33"
hjkl-markdown-tui = "0.33"
hjkl-xdg = "0.33"
hjkl-icons = "0.33"
hjkl-splash = "0.33"

# third-party
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
unicode-width = "0.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
glob = "0.3"
ignore = "0.4"
notify = "8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2"
toml = { version = "0.8", features = ["parse"] }
toml_edit = "0.22"
tempfile = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
