[package]
name = "hrdr-agent"
description = "hrdr agent loop — drives an OpenAI-compatible model through tool calls until a coding task is done."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-llm.workspace = true
hrdr-tools.workspace = true
hjkl-xdg.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures-util.workspace = true
minijinja.workspace = true
reqwest.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
async-trait = "0.1"
which = "7"
glob.workspace = true
toml.workspace = true
toml_edit.workspace = true

[features]
# Test-only isolation of the user's real files (see src/test_support.rs), turned on
# by the other crates' test binaries. Adds nothing to a release build.
test-support = []

[dev-dependencies]
tempfile.workspace = true
