[package]
name = "hrdr-app"
description = "hrdr shared application core — UI-agnostic logic (slash-command registry, aliases, quit detection) shared by the TUI and GUI frontends."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-agent.workspace = true
hjkl-xdg.workspace = true
ignore.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
