[package]
name = "hrdr-app"
description = "hrdr shared application core — UI-agnostic logic (slash-command registry, aliases, quit detection) shared by the TUI and GUI frontends."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hrdr-agent.workspace = true
hrdr-tools.workspace = true
hjkl-clipboard.workspace = true
hjkl-theme.workspace = true
hjkl-xdg.workspace = true
ignore.workspace = true
notify.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
# A test never writes the developer's real sessions/config/history.
hrdr-agent = { workspace = true, features = ["test-support"] }
