[package]
name = "hrdr-llm"
description = "OpenAI-compatible chat-completions client for hrdr (streaming + native tool calls)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reqwest.workspace = true
hjkl-xdg.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
async-stream.workspace = true

[dev-dependencies]
# Sandboxes $HOME + the XDG roots before ANY test in this crate runs (ctor, no opt-in).
hrdr-test-support.workspace = true
tempfile.workspace = true
tokio.workspace = true
