[package]
name = "hrdr-tools"
description = "Agentic tool set for hrdr — read, write, edit, bash, grep, glob, todo. Native OpenAI tool calls."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
glob.workspace = true
similar.workspace = true
reqwest.workspace = true
async-trait = "0.1"
sha2 = "0.10"
miniz_oxide = "0.8"
which = "7"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
