[package]
name = "hrdr-tools"
description = "Agentic tool set for hrdr — read, write, edit, patch, bash, grep, find, ls, todo, fetch, search, and MCP. Native OpenAI tool calls."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
glob.workspace = true
ignore.workspace = true
regex = "1"
similar.workspace = true
reqwest.workspace = true
async-trait = "0.1"
futures-util = { workspace = true }
diffy = "0.5"
sha2 = "0.10"
miniz_oxide = "0.8"
which = "7"
serde_path_to_error = "0.1.20"
fs2 = "0.4"

[dev-dependencies]
# Sandboxes $HOME + the XDG roots before ANY test in this crate runs (ctor, no opt-in).
hrdr-test-support.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
