[package]
name = "hrdr-tui"
description = "hrdr terminal UI — agent transcript + vim-keybound input pane (hjkl), live streaming."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-agent.workspace = true
hrdr-editor.workspace = true
hjkl-theme.workspace = true
hjkl-theme-tui.workspace = true
hjkl-clipboard.workspace = true
hjkl-markdown.workspace = true
hjkl-markdown-tui.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures-util.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ignore.workspace = true
hjkl-icons.workspace = true
hjkl-xdg.workspace = true
chrono.workspace = true
serde_json.workspace = true
syntect.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
