[package]
name = "hrdr-tui"
description = "hrdr terminal UI — agent transcript + vim-keybound input pane (hjkl), live streaming."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hrdr-agent.workspace = true
hrdr-app.workspace = true
hrdr-editor.workspace = true
hrdr-tools.workspace = true
hjkl-clipboard.workspace = true
hjkl-markdown.workspace = true
hjkl-markdown-tui.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures-util.workspace = true
crossterm.workspace = true
ratatui.workspace = true
hjkl-splash.workspace = true
unicode-width.workspace = true
hjkl-icons.workspace = true
chrono.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Sandboxes $HOME + the XDG roots before ANY test in this crate runs (ctor, no opt-in).
hrdr-test-support.workspace = true

